# dev-command-center

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSIONING.md  build.bat  main.py  pyproject.toml
.github/workflows/: build-release.yml  pr-checks.yml  release.yml
devcommandcenter/: __init__.py  __main__.py  cli.py  config.py
devcommandcenter/database/: __init__.py  connection.py  models.py
devcommandcenter/services/: __init__.py  command_service.py  execution_log_service.py  process_service.py
devcommandcenter/ui/: command_dialog.py  log_window.py  main_window.py  theme.py
scripts/: build.py
tests/: test_mvp.py
